Kiwi 17/01/2024 update