@@ -142,4 +142,92 @@
 
     </dependencies>
 
+
+<build>
+<plugins>
+    <plugin>
+        <groupId>net.masterthought</groupId>
+        <artifactId>maven-cucumber-reporting</artifactId>
+        <version>5.7.7</version>
+        <executions>
+            <execution>
+                <id>execution</id>
+                <phase>test</phase>
+                <goals>
+                    <goal>generate</goal>
+                </goals>
+                <configuration>
+                    <projectName>Cucumber HTML Reports</projectName>
+                    <outputDirectory>${project.build.directory}</outputDirectory>
+                    <inputDirectory>${project.build.directory}</inputDirectory>
+                    <jsonFiles>
+                        <param>**/cucumber*.json</param>
+                    </jsonFiles>
+                </configuration>
+            </execution>
+        </executions>
+    </plugin>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>3.0.0-M1</version>
+        <configuration>
+            <testFailureIgnore>true</testFailureIgnore>
+            <skipTests>false</skipTests>
+            <includes>
+                <include>**/runners/*ApiRunner*.java</include>
+                <include>**/runners/*DBRunner*.java</include>
+            </includes>
+        </configuration>
+    </plugin>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.11.0</version>
+        <configuration>
+            <source>11</source>
+            <target>11</target>
+
+        </configuration>
+    </plugin>
+
+
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M1</version>
+
+        <configuration>
+            <parallel>classes</parallel>
+
+            <threadCount>3</threadCount>
+            <reuseForks>false</reuseForks>
+            <argLine>-Duser.language=en</argLine>
+            <argLine>-Xmx1024m</argLine>
+            <argLine>-XX:MaxPermSize=256m</argLine>
+            <argLine>-Dfile.encoding=UTF-8</argLine>
+            <forkCount>1</forkCount>
+
+            <useFile>false</useFile>
+            <includes>
+                <include>**/runners/*ApiRunner*.java</include>
+                <include>**/runners/*DBRunner*.java</include>
+            </includes>
+            <testFailureIgnore>true</testFailureIgnore>
+        </configuration>
+    </plugin>
+</plugins>
+</build>
+
+<profiles>
+<profile>
+    <id>logging</id>
+    <activation>
+        <activeByDefault>true</activeByDefault>
+    </activation>
+
+</profile>
+</profiles>
+
+
 </project>
